--- a/notebooks/tests.ipynb
+++ b/notebooks/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "\n",
     "encoded_experiment_id = quote(experiment_id, safe='')\n",
     "\n",
-    "url = f\"http://127.0.0.1:5001/experiment/{encoded_experiment_id}/result\"\n",
+    "url = f\"http://127.0.0.1:8080/experiment/{encoded_experiment_id}/result\"\n",
     "print(f\"Request URL: {url}\")\n",
     "\n",
     "params = {\n",
@@ -170,60 +170,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'results': {'filters/sort-by-ranking': {'checks': {'experiment_independence': True,\n",
+       "    'normal_approximation': True,\n",
        "    'num_of_variants': 3,\n",
        "    'sample_size_adequacy': {'6971': True, '6972': True, '7057': True},\n",
-       "    'user_independence': False,\n",
-       "    'variations': {'6971': 0.07464576279639223,\n",
-       "     '6972': 0.08194695143216933,\n",
-       "     '7057': 0.07025933159722221}},\n",
+       "    'user_independence': False},\n",
        "   'number_of_participants': 5629,\n",
-       "   'statistical_tests': {'anova': {'f_value': 1.2745965408675217,\n",
-       "     'p_value': 0.279622086493317},\n",
-       "    'chi_square': {'chi2': 2.549391302369261,\n",
-       "     'p_value': 0.2795160256484701,\n",
-       "     'significant_difference': False},\n",
-       "    'pairwise_comparisons': [{'effect': 0.008810455506561288,\n",
-       "      'p_value': 0.32720224629450056,\n",
-       "      'variant1': '6971',\n",
-       "      'variant2': '6972'},\n",
-       "     {'effect': -0.005205139669562264,\n",
-       "      'p_value': 0.5472481987276758,\n",
-       "      'variant1': '6971',\n",
-       "      'variant2': '7057'},\n",
-       "     {'effect': -0.014015595176123552,\n",
-       "      'p_value': 0.11557914053852647,\n",
-       "      'variant1': '6972',\n",
-       "      'variant2': '7057'}],\n",
-       "    'tukey_hsd': [['6971', '6972', 0.0088, 0.5786, -0.0119, 0.0295, False],\n",
-       "     ['6971', '7057', -0.0052, 0.826, -0.0259, 0.0155, False],\n",
-       "     ['6972', '7057', -0.014, 0.2548, -0.0348, 0.0068, False]],\n",
-       "    'variant_results': {'6971': {'ci': [0.06914207211114115,\n",
-       "       0.0933515405613167],\n",
-       "      'conversions': 159,\n",
-       "      'n': 1957,\n",
-       "      'prop': 0.08124680633622892},\n",
-       "     '6972': {'ci': [0.07725605811132244, 0.10285846557425798],\n",
-       "      'conversions': 173,\n",
-       "      'n': 1921,\n",
-       "      'prop': 0.09005726184279021},\n",
-       "     '7057': {'ci': [0.06418535837081141, 0.08789797496252191],\n",
-       "      'conversions': 146,\n",
-       "      'n': 1920,\n",
-       "      'prop': 0.07604166666666666}}},\n",
+       "   'statistical_tests': {'chi_square': {'chi2': 2.549391302369261,\n",
+       "     'p_value': 0.27951602564847017,\n",
+       "     'significant_difference': False}},\n",
        "   'variants': [{'id': '6971', 'number_of_purchases': 159},\n",
        "    {'id': '6972', 'number_of_purchases': 173},\n",
        "    {'id': '7057', 'number_of_purchases': 146}],\n",
        "   'winner': '6972'}}}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,12 +203,71 @@
     "experiment_id = \"filters/sort-by-ranking\"\n",
     "day = \"2021-08-02 00\"\n",
     "encoded_experiment_id = quote(experiment_id, safe='')\n",
-    "url = f\"http://127.0.0.1:5001/experiment/{encoded_experiment_id}/result\"\n",
+    "url = f\"http://127.0.0.1:8080/experiment/{encoded_experiment_id}/result\"\n",
     "params = {\n",
     "    \"day\": day\n",
     "}\n",
     "\n",
     "response = requests.get(url, params=params)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'results': {'filters/sort-by-ranking': {'checks': {'experiment_independence': True,\n",
+       "    'normal_approximation': True,\n",
+       "    'num_of_variants': 3,\n",
+       "    'sample_size_adequacy': {'6971': True, '6972': True, '7057': True},\n",
+       "    'user_independence': False},\n",
+       "   'number_of_participants': 5629,\n",
+       "   'statistical_tests': {'chi_square': {'chi2': 2.549391302369261,\n",
+       "     'p_value': 0.27951602564847017,\n",
+       "     'significant_difference': False}},\n",
+       "   'variants': [{'id': '6971', 'number_of_purchases': 159},\n",
+       "    {'id': '6972', 'number_of_purchases': 173},\n",
+       "    {'id': '7057', 'number_of_purchases': 146}],\n",
+       "   'winner': '6972'}}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "from urllib.parse import quote\n",
+    "\n",
+    "from google.auth.transport.requests import Request\n",
+    "from google.oauth2 import service_account\n",
+    "\n",
+    "SERVICE_ACCOUNT_FILE = os.getenv(\"GOOGLE_APPLICATION_CREDENTIALS\")\n",
+    "URL = 'https://ab-test-api-gfeygdcx7a-uc.a.run.app'\n",
+    "\n",
+    "credentials = service_account.IDTokenCredentials.from_service_account_file(\n",
+    "    SERVICE_ACCOUNT_FILE,\n",
+    "    target_audience=URL\n",
+    ")\n",
+    "credentials.refresh(Request())\n",
+    "token = credentials.token\n",
+    "\n",
+    "experiment_id = \"filters/sort-by-ranking\"\n",
+    "day = \"2021-08-02 00\"\n",
+    "encoded_experiment_id = quote(experiment_id, safe='')\n",
+    "headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "url = f\"https://ab-test-api-gfeygdcx7a-uc.a.run.app/experiment/{encoded_experiment_id}/result\"\n",
+    "params = {\n",
+    "    \"day\": day\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, params=params, headers=headers)\n",
     "response.json()"
    ]
   }
